# pyfaer

./: Cargo.toml  pyproject.toml
doc/: dtype_1.md  mian.md
examples/: gen.rs
python/pyfaer/: __init__.py  __init__.pyi
python/tests/: bench_add.py  bench_iadd.py  test_all.py  test_faer_mat.py  test_mat.py  test_mat_level1.py  test_numpy.py  tests_dtype.py
src/: array.rs  cast.rs  dtype.rs  dtype_old.rs  lib.rs  mat.rs  numpy.rs  ufunc.rs
